# SVD_Tool_kit

./: Compact_SVD.py  Complete_svd.py  GSVD.py  HO_SVD.py  HO_V2.py  Join_SVD.py  LU_fact.py  QR_Methods.py  Q_SVD.py  README.md  SVD.py  T_SVD.py  multilinear_SVD.py  pyproject.toml  pyproject.xml  requirements.txt  setup.py  t_svd.m  tests.py
SVD_Tool_Kit/: Compact_SVD.py  Complete_svd.py  GSVD.py  HO_SVD.py  Join_SVD.py  Q_SVD.py  SVD.py  T_SVD.py  __init__.py
tests/: images_and_signal_process.py  prueba.py  tests.py
